created a footer containing credintials of credibility

--- a/index.html
+++ b/index.html
@@ -65,9 +65,29 @@
                 </td>
             </tr>
 
+        </table>        
+    </main><br>
+
+    <footer>
+        <table width="100%">
+            <tr>
+                <td width="33.3%">
+                    <h3><u><font color="green"> Testimonial </font></u></h3>
+                    <i>"Mr. Smith is very a dedicated employee who is full of potential and innovative thinker. He has high performance and finish his tasks on time"</i> 
+                </td>
+
+                <td width="33.3%">
+                    <h3><u><font color="green"> Favorite Quote </font></u></h3>
+                    <i>"Programming isn't about what you know; it's about what you can figure out."</i>
+                </td>
+
+                <td width="33.3%">
+                    <h3><u><font color="green"> Recent Project </font></u></h3>
+                    <i> I created a full-stack website for Blom bank related to all its information and integrated transactions with high security </i>
+                </td>
+            </tr>
         </table>
-        
-    </main>
+    </footer>
 
     
 </body>
