created section containing person's contacts and working experience and his certificates

--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@
             <td width="30%"> <!-- Aside content on the left -->
 
                 <aside>
-                    <img src="images.jpeg" alt="profile picture" width="120" height="150">
+                    <img src="images.jpeg" alt="profile picture" width="160" height="190">
 
                     <h2> Education</h2>
                     <strong> Bachelor of Science in Computer Science</strong>
@@ -51,9 +51,48 @@
 
             </td>
             <td width="70%"> <!-- Main content on the right -->
+
                 <section>
-                
+                    
+                    <p>&#128222; 123-456-7890</p><br>
+                    <p>&#9993; info@mysite.com</p><br>
+                    <p>&#128205; San Diego, CA, 92101 </p><br>
+
+                    <hr>
+
+                    <p> A full-stack software engineer with six years of experience designing and implementing scalable web applications.
+                        Proficient in front-end and back-end technologies, with a focus on creating robust, user-friendly, and secure solutions.
+                    </p>
+
+                    <hr>
+
+                    <h2><u> Professional Experience</u></h2>
+                    <strong> Full-Stack Software Engineer </strong><br>
+                    <em> CloudPrime Solutions, San Diego, CA I August 2018 - Current </em><br>
+                    <ul>
+                        <li> Develop full-stack web applications for enterprise clients, improving page load times by 30% through optimized front-end and back-end performance</li>
+                        <li> Design RESTful APIs and integrate third-party services, enabling seamless functionality for over 200,000 users </li>
+                        <li> Lead a team of four developers in transitioning to a microservices architecture, reducing deployment times by 25% </li>
+                    </ul>
+
+                    <strong> Software Engineer </strong><br>
+                    <em> NextGen Web Developers, San Diego, CA I July 2016 - August 2018  </em><br>
+                    <ul>
+                        <li> Built responsive front-end components using React and integrated them with Node.js back-end services</li>
+                        <li> Implemented security best practices, ensuring data protection and achieving 99.9% system uptime</li>
+                        <li> Conducted code reviews and debugging to improve application performance and maintainability </li>
+                    </ul>
+
+                    <hr>
+
+                    <h2><u> Certifications </u></h2>
+                    <ul>
+                        <li> AWS Certified Developer - Associate, 2021</li>
+                        <li> MongoDB Developer Certification, 2020 </li>
+                    </ul>
+
                 </section>
+
             </td>
         </tr>
     </table>
