creatwd two different forms one as text field for any submitted question and other is radio form selecting one choice of preferred project

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,32 @@
                 </td>
             </tr>
         </table>
+
         <br><br>
+        <h2><u> Questions? </u></h2>
+        <strong><u> if you have any extra question, please feel free to submit your question in the field below: </u></strong>
+        <br><br>
+
+        <form>
+            <label for="question"> Any Question? </label>
+            <input type="text">
+            <input type="submit" value="submit">
+        </form>
+        <br><br>
+
+        <strong><u> Does any of the following projects peak your interest? </u></strong>
+        <br>
+
+        <form>
+            <input type="radio" id="bloom bank" name="fav_project" value="bloom bank">
+            <label for="bloom bank project">bloom bank project</label><br>
+            <input type="radio" id="tech company" name="fav_project" value="teach company">
+            <label for="tech company website project">tech company website project</label><br>
+            <input type="radio" id="update software" name="fav_project" value="update software">
+            <label for="update software project">update software project</label><br><br>
+            <input type="submit" value="submit">
+        </form>
+        <br><br><br>
     </main>
 
     <footer>
